--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 			<version>2.8.8</version>
 		</dependency>
 
+		<!--java对象转json，json转对象 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.62</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
