--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 ## jdbc-primary
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/ceshi
+spring.datasource.url=jdbc:mysql://10.0.0.189:3307/ceshi
 spring.datasource.username=root
 spring.datasource.password=123456
 
