--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
 			<version>1.2.62</version>
 		</dependency>
 
+		<!--redis-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
