--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 ## jdbc-primary
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.0.0.189:3307/ceshi?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3307/ceshi?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -27,7 +27,7 @@ logging.file=myLog.log
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
 # Redis\u670D\u52A1\u5668\u5730\u5740
-spring.redis.host=127.0.0.1
+spring.redis.host=localhost
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.redis.port=6379
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
@@ -41,4 +41,4 @@ spring.redis.jedis.pool.max-idle=10
 # \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.jedis.pool.min-idle=0
 # \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
-spring.redis.timeout=1000
+spring.redis.timeout=10000
